--- a/indexer.yaml
+++ b/indexer.yaml
@@ -1,32 +1,41 @@
-indexer: tindex
-solName: shreyas/drama
+indexer: liquid
+solName: shreyas/liquid
 schema:
   file: ./schema.json
 dataSources:
   - kind: solana/program
-    name: test_js
+    name: capx_sol_liq
     network: devnet
     source:
-      programId: Hoky7nBXPQHS1Dt69d95YbbQ5ibHGV6mhGHQWSFu6aZK
-      idl: test_js
-      startBlock: 160903137
+      programId: 8cBtwyWTpCRvZpCb1gUneSKVbajt3QWHYHqKJkEb8574
+      idl: capx_sol_liq
+      startBlock: 162230872
     mapping:
       kind: solana/events
       entities:
-        - U64Event
-        - StringEvent
-        - PubkeyEvent
-        - U8Event
+        - DerivativeRegEvent
+        - TokenRegEvent
+        - TokenMintEvent
+        - TokenBurnEvent
       idls:
-        - name: test_js
-          file: ./idls/test_js.json
+        - name: capx_sol_liq
+          file: ./idls/capx_sol_liq.json
       eventHandlers:
-        - event: U64Event(data u64,label indexed string)
-          handler: handleU64Event
-        - event: StringEvent(uid u64,data string,label indexed string)
-          handler: handleStringEvent
-        - event: PubkeyEvent(uid u64,data publicKey,label indexed string)
-          handler: handlePubkeyEvent
-        - event: U8Event(uid u64,data u8,label indexed string)
-          handler: handleU8Event
+        - event: >-
+            DerivativeRegEvent(basetoken publicKey,timestamp
+            string,derivativetoken publicKey,derivativeinitializer
+            publicKey,label indexed string)
+          handler: handleDerivativeRegEvent
+        - event: >-
+            TokenRegEvent(tokenowner publicKey,tokenmint publicKey,name
+            string,desc string,tokendecimal u8,label indexed string)
+          handler: handleTokenRegEvent
+        - event: >-
+            TokenMintEvent(basetoken publicKey,amount u64,derivativetoken
+            publicKey,receiver publicKey,label indexed string)
+          handler: handleTokenMintEvent
+        - event: >-
+            TokenBurnEvent(basetoken publicKey,amount u64,derivativetoken
+            publicKey,receiver publicKey,label indexed string)
+          handler: handleTokenBurnEvent
       file: ./src/mapping.ts
