--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tindex",
+  "name": "liquid",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,8 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/util-dynamodb": "^3.171.0",
     "@project-serum/anchor": "^0.25.0",
     "@types/node": "^18.6.5",
+    "aws-sdk": "^2.1216.0",
+    "axios": "^0.27.2",
+    "bn.js": "^5.2.1",
+    "js-yaml": "^4.1.0",
     "ts-node": "^10.9.1"
   }
 }
